Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109677

QtFuture::makeReadyFuture(mutable QList) creates wrong future

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.6.0
    • 6.1.3, 6.2.6, 6.3.2, 6.4.1, 6.5.0 Beta1
    • Core: QtConcurrent
    • None
    • 8
    • 028c367f7 (dev), 9b4b32ec9 (dev), 7f38f9f39 (dev), f535958c2 (dev)
    • Foundation Sprint 77, Foundation Sprint 78, Foundations Sprint 79

      Due to a missing constraint the perfectly-forwarding overload wins for mutable QList<T> and returns a QFuture<QList<T>. Expected: the QList overload is chosen and returns a multi-valued QFuture<T>.

        For Gerrit Dashboard: QTBUG-109677
        # Subject Branch Project Status CR V

            ivan.solovev Ivan Solovev
            mmutz Marc Mutz
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes